# WeChat-group-assistant

./: .gitmodules  README.md  config.yaml  prompt.yaml  pyproject.toml
wechat_group_assistant/: message_processor.py  question_process.py  wechat_actions.py
wechat_group_assistant/utils/: chatbot.py  config.py  prompt.py  utils.py
